Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43854

Windows: Qt::WA_TranslucentBackground prevents frameless tool window to show up

XMLWordPrintable

    • 23996a9e4007d12cf3eee8f80cebedaf2bcca2e1

      When you try to show a QQuickWidget, which is a translucent (Qt::WA_TranslucentBackground) frameless tool window (Qt::FramelessWindowHint | Qt::Tool) on top of another window, it doesn't show up. Removing Qt::WA_TranslucentBackground attribute helps to show the window (not translucent though) and removing Qt::FramelessWindowHint helps to show the window (but with frames and not translucent either).

      The attached example demonstrates the problem. The first button shows the QQuickWidget window and you can trigger the Qt::WA_TranslucentBackground on and off with the check box. The second button shows how it works if the QQuickWidget is a widget and not a window.

      The problem is reproducible only on Windows (tested on Windows 7).

        1. qtbug43854.zip
          8 kB
        2. qtbug43854.zip
          6 kB
        For Gerrit Dashboard: QTBUG-43854
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes